// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DragDrop /> Accessibility story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="3"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="3"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-0"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-0"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Each drag item has role="button"
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          (Open this canvas in its own tab for best results)
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Use Tab key to select an item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Press Spacebar to pick up the selected item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Arrow keys move the item within a container (up/down) or to another container (left/right)
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          Press Spacebar again to drop the item
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-3-hidden-text-28"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="3"
        data-rbd-drag-handle-draggable-id="item-6"
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="item-6"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
        >
          All actions (using mouse/touch or keyboard controls) are announced to screen readers
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="3"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> Default story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #3
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #4
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> DragByHandle story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--unstyled drag-drop--handles"
    data-rbd-droppable-context-id="5"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="5"
      data-rbd-droppable-id="container-1"
    >
      <div
        class="drag-drop-item"
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="item-1"
      >
        <div
          aria-describedby="rbd-hidden-text-5-hidden-text-46"
          class="drag-drop-item--handle"
          data-rbd-drag-handle-context-id="5"
          data-rbd-drag-handle-draggable-id="item-1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="#58636F"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#drag-indicator"
            />
          </svg>
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        class="drag-drop-item"
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="item-2"
      >
        <div
          aria-describedby="rbd-hidden-text-5-hidden-text-46"
          class="drag-drop-item--handle"
          data-rbd-drag-handle-context-id="5"
          data-rbd-drag-handle-draggable-id="item-2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="#58636F"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#drag-indicator"
            />
          </svg>
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        class="drag-drop-item"
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="item-3"
      >
        <div
          aria-describedby="rbd-hidden-text-5-hidden-text-46"
          class="drag-drop-item--handle"
          data-rbd-drag-handle-context-id="5"
          data-rbd-drag-handle-draggable-id="item-3"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="#58636F"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#drag-indicator"
            />
          </svg>
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="5"
      data-rbd-droppable-id="container-2"
    >
      <div
        class="drag-drop-item"
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="item-4"
      >
        <div
          aria-describedby="rbd-hidden-text-5-hidden-text-46"
          class="drag-drop-item--handle"
          data-rbd-drag-handle-context-id="5"
          data-rbd-drag-handle-draggable-id="item-4"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="#58636F"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#drag-indicator"
            />
          </svg>
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        class="drag-drop-item"
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="item-5"
      >
        <div
          aria-describedby="rbd-hidden-text-5-hidden-text-46"
          class="drag-drop-item--handle"
          data-rbd-drag-handle-context-id="5"
          data-rbd-drag-handle-draggable-id="item-5"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="#58636F"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#drag-indicator"
            />
          </svg>
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<DragDrop /> MultipleContainers story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--multiple"
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #3
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-2"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #4
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="container-3"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-9"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<DragDrop /> UnstyledItems story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop drag-drop--unstyled drag-drop--multiple"
    data-rbd-droppable-context-id="4"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="card"
        >
          <div
            class="card__body"
          >
            This is a Card component.
          </div>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="card"
        >
          <div
            class="card__body"
          >
            Another Card component.
          </div>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-4-hidden-text-39"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="4"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="card"
        >
          <div
            class="card__body"
          >
            All styles are being set by the Card.
          </div>
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;

exports[`<DragDrop /> VariousSizedItems story renders snapshot 1`] = `
<div
  style="margin: 1rem;"
>
  <section
    class="drag-drop"
    data-rbd-droppable-context-id="2"
    data-rbd-droppable-id="all-containers"
  >
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="container-1"
    >
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-1"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #1
        </div>
        <div
          class="fpo"
        >
          Content here
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-2"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-2"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #2
        </div>
        <div
          class="fpo"
        >
          This container
          <br />
          has a lot of content
          <br />
          and will be taller than
          <br />
          other containers
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-3"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-3"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
          style="font-size: 12px; padding: 0px; text-align: center;"
        >
          Small container
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-4"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-4"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="fpo"
          style="font-size: 12px; padding: 0px; text-align: center;"
        >
          Another small container
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-19"
        class="drag-drop-item"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="item-5"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="item-5"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="drag-drop-item--title"
        >
          Project #5
        </div>
        <div
          class="fpo"
        >
          Another
          <br />
          larger
          <br />
          container
        </div>
      </div>
    </div>
    <div
      class="drag-drop-container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="container-2"
    />
  </section>
</div>
`;
